[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MissionConfiguration.tscn" type="PackedScene" id=1]
[ext_resource path="res://titlescripts/SliderToText.gd" type="Script" id=2]
[ext_resource path="res://titlescripts/CustomCampaignButtons.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

func _on_NewCampaign_pressed():
	Global.goto_scene(\"res://Game.tscn\")
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 454.0
margin_top = 200.0
margin_right = 569.0
margin_bottom = 400.0
custom_constants/separation = 16

[node name="NewCampaign" type="Button" parent="Main/VBoxContainer"]
margin_right = 115.0
margin_bottom = 20.0
text = "New Campaign"
script = SubResource( 1 )

[node name="NewSandbox" type="Button" parent="Main/VBoxContainer"]
margin_top = 36.0
margin_right = 115.0
margin_bottom = 56.0
text = "New Sandbox"

[node name="Load" type="Button" parent="Main/VBoxContainer"]
margin_top = 72.0
margin_right = 115.0
margin_bottom = 92.0
text = "Load Game"

[node name="Settings" type="Button" parent="Main/VBoxContainer"]
margin_top = 108.0
margin_right = 115.0
margin_bottom = 128.0
text = "Settings"

[node name="Editor" type="Button" parent="Main/VBoxContainer"]
margin_top = 144.0
margin_right = 115.0
margin_bottom = 164.0
text = "Campaign Editor"

[node name="Exit" type="Button" parent="Main/VBoxContainer"]
margin_top = 180.0
margin_right = 115.0
margin_bottom = 200.0
text = "Exit to Desktop"

[node name="Campaign" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Campaign"]
margin_left = 150.0
margin_top = 8.0
margin_right = 870.0
margin_bottom = 592.0
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Campaign/VBoxContainer"]
margin_right = 720.0
margin_bottom = 48.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Campaign/VBoxContainer/HBoxContainer"]
margin_right = 466.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 466.0
margin_bottom = 48.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 2

[node name="Label" type="Label" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_top = 5.0
margin_right = 108.0
margin_bottom = 19.0
text = "Campaign Name:"

[node name="CampaignName" type="LineEdit" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_left = 116.0
margin_right = 395.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 0 )
max_length = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_top = 33.0
margin_right = 108.0
margin_bottom = 47.0
text = "Missions:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_left = 116.0
margin_top = 32.0
margin_right = 395.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="Label" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 19.0
margin_bottom = 15.0
rect_min_size = Vector2( 19, 0 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missions" type="HSlider" parent="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 279.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
min_value = 1.0
max_value = 20.0
value = 1.0
rounded = true
tick_count = 20
ticks_on_borders = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Campaign/VBoxContainer/HBoxContainer"]
margin_left = 470.0
margin_right = 720.0
margin_bottom = 48.0
custom_constants/vseparation = 8
custom_constants/hseparation = 64
columns = 2

[node name="CustomResource" type="Button" parent="Campaign/VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 131.0
margin_bottom = 20.0
text = "Custom Resources"

[node name="Save" type="Button" parent="Campaign/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 195.0
margin_right = 250.0
margin_bottom = 20.0
text = "Save"
script = ExtResource( 3 )

[node name="CustomRecipy" type="Button" parent="Campaign/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 131.0
margin_bottom = 48.0
text = "Custom Recipies"

[node name="Delete" type="Button" parent="Campaign/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 195.0
margin_top = 28.0
margin_right = 250.0
margin_bottom = 48.0
text = "Delete"
script = ExtResource( 3 )

[node name="TabContainer" type="TabContainer" parent="Campaign/VBoxContainer"]
margin_top = 56.0
margin_right = 720.0
margin_bottom = 576.0
rect_min_size = Vector2( 720, 512 )
tab_align = 0

[node name="1" parent="Campaign/VBoxContainer/TabContainer" instance=ExtResource( 1 )]

[node name="HBoxContainer2" type="HBoxContainer" parent="Campaign/VBoxContainer"]
margin_top = 584.0
margin_right = 720.0
margin_bottom = 584.0
custom_constants/separation = 8
alignment = 2

[node name="WarningDialog" type="AcceptDialog" parent="Campaign"]
margin_left = 458.0
margin_top = 271.0
margin_right = 562.0
margin_bottom = 329.0
popup_exclusive = true
window_title = "Warning!"
resizable = true

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="Campaign"]
visible = true
margin_left = 408.0
margin_top = 262.0
margin_right = 612.0
margin_bottom = 337.0
popup_exclusive = true
window_title = "Confirmation"
dialog_text = "Are you sure that you want to
delete this cusom campaign?"

[connection signal="pressed" from="Main/VBoxContainer/NewCampaign" to="Main/VBoxContainer/NewCampaign" method="_on_NewCampaign_pressed"]
[connection signal="value_changed" from="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer/HBoxContainer/Missions" to="Campaign/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer/HBoxContainer/Missions" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Campaign/VBoxContainer/HBoxContainer/GridContainer/Save" to="Campaign/VBoxContainer/HBoxContainer/GridContainer/Save" method="_on_Save_pressed"]
[connection signal="pressed" from="Campaign/VBoxContainer/HBoxContainer/GridContainer/Delete" to="Campaign/VBoxContainer/HBoxContainer/GridContainer/Delete" method="_on_Delete_pressed"]
[connection signal="confirmed" from="Campaign/DeleteConfirmationDialog" to="Campaign/VBoxContainer/HBoxContainer/GridContainer/Delete" method="_on_DeleteConfirmationDialog_confirmed"]
